--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongodb": "^3.3.3",
+    "morgan": "^1.9.1",
     "node-watch": "^0.6.3",
     "phin": "^3.4.0",
     "pug": "^2.0.4",
