--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "zkillboard",
+  "name": "zkilljs",
   "version": "0.0.1",
   "license": "MIT",
   "dependencies": {
-    "async-redis": "^1.1.7",
+    "async-redis": "^1.*",
     "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "mongodb": "^3.5.5",
-    "morgan": "^1.10.0",
-    "node-watch": "^0.6.3",
-    "phin": "^3.4.0",
-    "pug": "^2.0.4",
-    "utf8": "^3.0.0"
+    "express": "^4.17.*",
+    "mongodb": "^3.5.*",
+    "morgan": "^1.10.*",
+    "node-watch": "^0.6.*",
+    "phin": "^3.4.*",
+    "pug": "^2.0.*",
+    "utf8": "^3.0.*"
   }
 }
