implemented websockets - client side

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "node-watch": "^0.6.*",
     "phin": "^3.4.*",
     "pug": "^2.0.*",
-    "utf8": "^3.0.*"
+    "utf8": "^3.0.*",
+    "websocket": "^1.0.31"
   }
 }
