--- a/setup/nginx/zkillboard.dev.conf
+++ b/setup/nginx/zkillboard.dev.conf
@@ -8,26 +8,9 @@ upstream zkilljs_websocket {
 }
 
 proxy_cache_path /tmp/nginxproxy/ levels=1:2 keys_zone=zkilljs:10m max_size=10g inactive=62m use_temp_path=off;
-proxy_cache zkilljs;
-proxy_cache_use_stale error timeout updating http_500 http_502 http_503 http_504;
-proxy_cache_lock on;
-proxy_cache_lock_timeout 31s;
-proxy_cache_min_uses 1;
 
-add_header X-Cache-Status $upstream_cache_status;
-
-proxy_cache_revalidate on;
-proxy_ignore_headers "Cache-Control" "Expires" "X-Accel-Expires" "Set-Cookie";
-proxy_hide_header "Set-Cookie";
-
-proxy_set_header        X-Real-IP       $remote_addr;
-proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
-
-
-# nginx server instance
 server {
 	server_name zkillboard.dev;
-	server_name	145.239.253.208;
 	listen 443 ssl;
 	listen [::]:443 ssl;
 	include snippets/self-signed.conf;
@@ -41,23 +24,17 @@ server {
 		proxy_pass http://zkilljs_websocket;
 	}
 
-	location ~ (^/cache/1day|^/favicon.ico$) {
-		proxy_cache_lock on;
-		proxy_set_header zkilljsproxy true;
-		proxy_set_header Host $http_host;
-		proxy_set_header X-Forwarded-For $remote_addr;
+	location ~ (^/favicon.ico$) {
 		proxy_cache_valid 200 1d;
 		expires 1d;
+		include "zkillproxy.conf";
 		proxy_pass http://zkilljs_www;
 	}
 
-	location /cache/1hour {
-		proxy_cache_lock on;
-		proxy_set_header zkilljsproxy true;
-		proxy_set_header Host $http_host;
-		proxy_set_header X-Forwarded-For $remote_addr;
-		proxy_cache_valid 200 60m;
-		expires 60m;
+	# Rely on CF for the prolonged caching, only cache for 5 minutes here
+	location /cache/1 {
+		proxy_cache_valid 200 5m;
+		include "zkillproxy.conf";
 		proxy_pass http://zkilljs_www;
 	}
 
