--- a/setup/nginx/zkillboard.dev.conf
+++ b/setup/nginx/zkillboard.dev.conf
@@ -24,29 +24,30 @@ server {
 		proxy_pass http://zkilljs_websocket;
 	}
 
-	location ~ (^/favicon.ico$) {
+	location ~ (^/js/|^/css/|^/img/|^/favicon.ico$) {
+		root /var/www/zkilljs/www/public;
+		
+		add_header X-Frame-Options "SAMEORIGIN";
 		proxy_cache_valid 200 1d;
 		expires 1d;
-		include "zkillproxy.conf";
-		proxy_pass http://zkilljs_www;
+		try_files $uri $uri/ =404;
 	}
 
 	# Rely on CF for the prolonged caching, only cache for 5 minutes here
 	location /cache/1 {
-		proxy_cache_valid 200 5m;
-		include "zkillproxy.conf";
+		#proxy_cache_valid 200 5m;
+		#include "zkillproxy.conf";
 		proxy_pass http://zkilljs_www;
 	}
 
 	location / {
-		root /var/www/zkilljs/public;
-		index index.html;
 		try_files $uri $uri/ @node;
 	}
 
 	location @node {
 		proxy_set_header Host $http_host;
 		proxy_set_header X-Forwarded-For $remote_addr;
+		add_header X-Frame-Options "SAMEORIGIN";
 		proxy_pass http://zkilljs_www;
 	}
 }
