updated nginx configuration

--- a/setup/nginx/zkillboard.dev.conf
+++ b/setup/nginx/zkillboard.dev.conf
@@ -28,16 +28,19 @@ server {
 		root /var/www/zkilljs/www/public;
 		
 		add_header X-Frame-Options "SAMEORIGIN";
-		proxy_cache_valid 200 1d;
-		expires 1d;
 		try_files $uri $uri/ =404;
 	}
 
-	# Rely on CF for the prolonged caching, only cache for 5 minutes here
+	# Rely on CloudFlare for the prolonged caching, only cache for 5 minutes here
 	location /cache/1 {
 		#proxy_cache_valid 200 5m;
 		#include "zkillproxy.conf";
 		proxy_pass http://zkilljs_www;
+	}
+
+	location = / {
+		index /label/all;
+		try_files $uri $uri/ @node;
 	}
 
 	location / {
@@ -50,4 +53,6 @@ server {
 		add_header X-Frame-Options "SAMEORIGIN";
 		proxy_pass http://zkilljs_www;
 	}
+
+	access_log /var/log/nginx/zkillboard.dev.log;
 }
