implemented autocompleting search

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "express": "^4.17.*",
     "mongodb": "^3.5.9",
     "morgan": "^1.10.*",
+    "mysql": "^2.18.1",
     "node-watch": "^0.6.*",
     "phin": "^3.5.0",
     "pug": "^2.0.*",
