various setup updates

--- a/setup/nginx/zkillboard.dev.conf
+++ b/setup/nginx/zkillboard.dev.conf
@@ -13,8 +13,9 @@ server {
 	server_name zkillboard.dev;
 	listen 443 ssl;
 	listen [::]:443 ssl;
-	include snippets/self-signed.conf;
-	include snippets/ssl-params.conf;
+
+	ssl_certificate /etc/ssl/certs/localhost.crt;
+	ssl_certificate_key /etc/ssl/private/localhost.key;
 
 	location /websocket/ {
 		proxy_http_version 1.1;
@@ -25,7 +26,7 @@ server {
 	}
 
 	location ~ (^/js/|^/css/|^/img/|^/favicon.ico$) {
-		root /var/www/zkilljs/www/public;
+		root /home/zkill/zkilljs/www/public;
 		
 		add_header X-Frame-Options "SAMEORIGIN";
 		try_files $uri $uri/ =404;
